<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.AppDetailsActivity">

    <item  android:id="@+id/item1"
        app:showAsAction="always"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/item1"/>

    <item  android:id="@+id/item2"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/item2"/>

    <item  android:id="@+id/item3"
        app:showAsAction="withText"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/item3"/>

    <item  android:id="@+id/item4"
        app:showAsAction="withText"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/item4"/>

    <item  android:id="@+id/item5"
        app:showAsAction="withText"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/item5"/>
</menu>